--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header class="site-header">
       <div class="container header-inner">
-        <div class="brand">MyCompany</div>
+        <div class="brand">NusaTech</div>
         <nav class="nav">
           <a href="#home">Home</a>
           <a href="#profile">Our Profile</a>
@@ -55,7 +55,7 @@
           <div class="card-grid">
             <article class="card profile-card">
               <div class="avatar" aria-hidden="true"></div>
-              <h3>Alexandra Putri</h3>
+              <h3>Vina Nurul Izzati</h3>
               <p>Lead Software Engineer</p>
             </article>
             <article class="card profile-card">
@@ -77,7 +77,7 @@
         <div class="container">
           <h2 class="section-title">About the Company</h2>
           <p>
-            MyCompany merupakan perusahaan teknologi yang berfokus pada solusi web
+            NusaTech merupakan perusahaan teknologi yang berfokus pada solusi web
             modern. Kami membantu klien membangun produk digital yang cepat,
             aman, dan mudah digunakan, mulai dari perencanaan, desain, hingga
             implementasi.
@@ -174,7 +174,7 @@
 
     <footer class="site-footer">
       <div class="container">
-        <p>© <span id="year"></span> MyCompany. All rights reserved.</p>
+        <p>© <span id="year"></span> NusaTech. All rights reserved.</p>
       </div>
     </footer>
 
